<resources>
    <string name="app_name">e2eDemo</string>
    <string name="sign_up">Register Yourself</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerBtn">Register</string>
    <string name="logo">logo</string>
    <string name="registerLabel">Register?</string>
    <string name="loginBtn">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_registered">Already registered?</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="last_message">last message</string>
    <string name="enter_message">Enter Message</string>
    <!--    <string name="default_web_client_id"> </string>-->
</resources>